Add favicon to the site

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       content="NVG - Digital Systems for Automation, Design & Growth"
     />
     <title>NVG — Digital Systems for Automation, Design & Growth</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 
     <!-- Meta Pixel Code -->
     <script>
