--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
       content="NVG - Digital Systems for Automation, Design & Growth"
     />
     <title>NVG — Digital Systems for Automation, Design & Growth</title>
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" href="/favicon.ico" sizes="any" />
+    <link rel="shortcut icon" href="/favicon.ico" />
 
     <!-- Meta Pixel Code -->
     <script>
