--- a/index.html
+++ b/index.html
@@ -1,13 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- SEO Meta Tags -->
+    <title>Создание сайтов и лендингов в Молдове | NVG - Разработка под ключ</title>
     <meta
       name="description"
-      content="NVG - Digital Systems for Automation, Design & Growth"
+      content="Профессиональная разработка лендингов, интернет-магазинов и чат-ботов в Молдове. Создание сайтов под ключ от $100. Telegram боты, автоматизация, CRM. Бесплатная консультация!"
     />
-    <title>NVG — Digital Systems for Automation, Design & Growth</title>
+    <meta
+      name="keywords"
+      content="создание сайтов молдова, разработка лендингов молдова, лендинг кишинев, создание интернет магазина молдова, telegram бот молдова, разработка сайтов молдова, веб студия молдова, shopify молдова, автоматизация бизнеса молдова"
+    />
+    <meta name="author" content="NVG Tech" />
+    <meta name="robots" content="index, follow" />
+    <meta name="googlebot" content="index, follow" />
+    <link rel="canonical" href="https://nvg.md" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://nvg.md" />
+    <meta property="og:title" content="Создание сайтов и лендингов в Молдове | NVG" />
+    <meta property="og:description" content="Разработка лендингов, интернет-магазинов и чат-ботов в Молдове. От $100. Бесплатная консультация!" />
+    <meta property="og:image" content="https://nvg.md/og-image.jpg" />
+    <meta property="og:locale" content="ru_RU" />
+    <meta property="og:site_name" content="NVG Tech" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://nvg.md" />
+    <meta name="twitter:title" content="Создание сайтов и лендингов в Молдове | NVG" />
+    <meta name="twitter:description" content="Разработка лендингов, интернет-магазинов и чат-ботов в Молдове. От $100." />
+    <meta name="twitter:image" content="https://nvg.md/og-image.jpg" />
+
+    <!-- Geo Tags -->
+    <meta name="geo.region" content="MD" />
+    <meta name="geo.placename" content="Moldova, Chisinau" />
+
     <link rel="icon" href="/favicon.ico" sizes="any" />
     <link rel="shortcut icon" href="/favicon.ico" />
 
@@ -81,6 +112,55 @@
         alt=""
       />
     </noscript>
+
+    <!-- Schema.org structured data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "NVG Tech",
+      "url": "https://nvg.md",
+      "logo": "https://nvg.md/favicon.ico",
+      "description": "Разработка лендингов, интернет-магазинов и чат-ботов в Молдове",
+      "address": {
+        "@type": "PostalAddress",
+        "addressCountry": "MD",
+        "addressLocality": "Chisinau"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": "47.0105",
+        "longitude": "28.8638"
+      },
+      "areaServed": {
+        "@type": "Country",
+        "name": "Moldova"
+      },
+      "sameAs": [
+        "https://nvg.md"
+      ],
+      "offers": [
+        {
+          "@type": "Offer",
+          "name": "Чат-боты и автоматизация",
+          "price": "50",
+          "priceCurrency": "USD"
+        },
+        {
+          "@type": "Offer",
+          "name": "Лендинг",
+          "price": "100",
+          "priceCurrency": "USD"
+        },
+        {
+          "@type": "Offer",
+          "name": "Интернет-магазин + Аналитика",
+          "price": "450",
+          "priceCurrency": "USD"
+        }
+      ]
+    }
+    </script>
 
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
